--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: 一直往前走
 url: 
 resume_site: http://www.hifreud.com/Resume.io/
 github: https://github.com/makui123/
-baseurl: ""
+baseurl: "LessOrMore/"
 description: Actually, less is more!
 meta_description: 种一棵树，最好的时间是十年前，然后是现在。
 motto: It's our wits that make us men.
